# egocentric-neural-compression

./: .gitignore  README.md  pyproject.toml
docs/: RELATED_WORK.md
figures/: rd_results.json
scripts/: download_aria.sh  download_aria_json.py  eval_x265.py  preprocess_aria.py  qualitative.py  setup_remote.sh  train_all.sh
src/ego_codec/: eval.py  train.py
src/ego_codec/data/: __init__.py  aria_loader.py
src/ego_codec/models/: __init__.py  baseline.py  blocks.py  imu_conditioned.py  imu_warp.py
tests/: test_shapes.py
